docs: 핵심 아키텍처 설계 및 기술 선택 근거 문서화
README 대폭 개선:
- 분산 타이머 스케줄링 시스템 아키텍처 상세 설명
- Redis TTL + Keyspace Notifications 기반 설계 근거
- 지능형 모니터링 시스템 (MongoDB JOIN 기반 누락 감지)
- 효율적인 분산 필터링 (Redis SET 교집합 연산)
- WebSocket vs SSE 기술 선택 이유 및 비교 분석

운영 가이드 추가:
- 실시간 모니터링 시스템 사용법
- 성능 메트릭 및 알람 기준
- 문제 해결 가이드 (Redis, Kafka, WebSocket)
- 성능 최적화 팁 (Redis, MongoDB, JVM)

빌드 설정:
- IntelliJ 실행을 위한 조건부 프론트엔드 빌드 설정